fix: fix visual issue with scrollbar

--- a/styles/_globals.sass
+++ b/styles/_globals.sass
@@ -6,9 +6,7 @@ html, body
   font-family: 'Open Sans', sans-serif
 
 html
-  @media screen and (min-width: 767.97px)
-    margin-left: calc(100vw - 100%)
-    margin-right: 0
+  @media screen and (max-width: 767.97px)
     overflow-y: scroll
 
 #__next
